add_subdirectory(PointingManager)

# PointingManager
set (PointingMgr_SRCS ${PointingMgr_SRCS} PARENT_SCOPE)
set (PointingMgr_HEADERS ${PointingMgr_HEADERS} PARENT_SCOPE)
set (PointingMgr_HEADERS_WPATH ${PointingMgr_HEADERS_WPATH} PARENT_SCOPE)
set (Main_PointingMgr_SRCS ${Main_PointingMgr_SRCS} PARENT_SCOPE)

set (INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

